tests/semantic/invalid/test_bad_condition.src
fn foo() : void {
    int x = 5;
    if (x) {
        x = 1;
    }
}
